minor fixes, z-index enhancements

--- a/mmpt.css
+++ b/mmpt.css
@@ -77,7 +77,7 @@ table td {
 button {
 	font-family: Arial, sans-serif;
 	font-weight: bold;
-	z-index: 9;
+	z-index: 3;
 }
 
 select {
@@ -115,7 +115,7 @@ input[type="range"] {
 	background-image: radial-gradient(#333, #111);
 	margin-bottom: 10px;
 	margin-top: 10px;
-	z-index: 8;
+	z-index: 1;
 	display: table;
 	margin: 0px 4px;
 	padding: 0px;
@@ -128,6 +128,12 @@ input[type="range"] {
 	font-size: 2em;
 	color: #fff;
 	text-align: center;
+}
+
+.monitor:active {
+	box-shadow: 8px 8px 20px #777;
+	cursor: move;
+	z-index: 2;
 }
 
 .monitor:hover {
